--- a/glacium/config/defaults/global_default.yaml
+++ b/glacium/config/defaults/global_default.yaml
@@ -10,6 +10,9 @@ XFOIL_BOUNDARY_OUT: bnd.dat
 XFOIL_POLAR_OUT: polars.dat
 XFOIL_SUCTION_OUT: psi.dat
 
+# Default path to the Pointwise executable (WSL-friendly)
+POINTWISE_BIN: "/mnt/c/Program Files/Cadence/FidelityPointwise2023.2.3/win64/bin/tclsh.exe"
+
 PWS_INI_NUM_PANELS: 400
 PWS_INI_TE_YPLUS: 0.0005
 PWS_INI_TE_YMINUS: -0.0005
