--- a/glacium/config/defaults/global_default.yaml
+++ b/glacium/config/defaults/global_default.yaml
@@ -3,7 +3,7 @@ PWS_PROFILE1: ../_data/AH63K127_densened.dat
 PWS_PROFILE2: ../_data/AH63K127_thickened.dat
 PWS_POLAR_FILE: pol_output.pol
 PWS_SUCTION_FILE: psi_output.pol
-
+POINTWISE_BIN: "C:/Program Files/Cadence/FidelityPointwise2023.2.3/win64/bin/tclsh.exe"
 XFOIL_REFINE_OUT: refined.dat
 XFOIL_THICKEN_OUT: thick.dat
 XFOIL_BOUNDARY_OUT: bnd.dat
