--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,10 +1,9 @@
-# .readthedocs.yaml
 version: 2
 
 build:
   os: ubuntu-22.04
   tools:
-    python: "3.11"  # Oder 3.13 wenn verfügbar, aber 3.11 ist stabil
+    python: "3.11"  # oder "3.13" falls RTD das unterstützt
   sphinx:
     configuration: docs/conf.py
 
