--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -3,9 +3,10 @@ version: 2
 build:
   os: ubuntu-22.04
   tools:
-    python: "3.11"  # oder "3.13" falls RTD das unterstützt
-  sphinx:
-    configuration: docs/conf.py
+    python: "3.11"
+
+sphinx:
+  configuration: docs/conf.py
 
 python:
   install:
