--- a/.gitignore
+++ b/.gitignore
@@ -136,7 +136,9 @@ ENV/
 env.bak/
 venv.bak/
 runs/
-docs/
+docs/_build/
+docs/_static/
+docs/_templates/
 glacium/.idea/
 # Spyder project settings
 .spyderproject
