--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,14 @@ authors = [
     {name = "pineOapple",email = "44525727+pineOapple@users.noreply.github.com"}
 ]
 readme = "README.md"
+license = "MIT"
+classifiers = [
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3 :: Only",
+    "Programming Language :: Python :: 3.12",
+]
 requires-python = ">=3.12"
 dependencies = [
     "click>=8",
@@ -23,6 +31,14 @@ build-backend = "poetry.core.masonry.api"
 
 [project.scripts]
 glacium = "glacium.cli:cli"
+
+[tool.poetry]
+exclude = [
+    ".idea",
+    "glacium/.idea",
+    "runs",
+    "docs/_build",
+]
 
 
 [tool.poetry.group.dev.dependencies]
