--- a/glacium/config/defaults/global_default.yaml
+++ b/glacium/config/defaults/global_default.yaml
@@ -5,6 +5,7 @@ PWS_POLAR_FILE: pol_output.pol
 PWS_SUCTION_FILE: psi_output.pol
 POINTWISE_BIN: "C:/Program Files/Cadence/FidelityPointwise2023.2.3/win64/bin/tclsh.exe"
 FENSAP_BIN: "C\\Program Files\\ANSYS Inc\\v251\\fensapice\\bin\\nti_sh.exe"
+FLUENT2FENSAP_EXE: "C\\Program Files\\ANSYS Inc\\v251\\fensapice\\bin\\fluent2fensap.exe"
 XFOIL_REFINE_OUT: refined.dat
 XFOIL_THICKEN_OUT: thick.dat
 XFOIL_BOUNDARY_OUT: bnd.dat
