--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [project]
 name = "glacium"
-version = "0.1.0"
+version = "0.0.0"  # Platzhalter, wird von Plugin überschrieben
 description = ""
 authors = [
-    {name = "pineOapple",email = "44525727+pineOapple@users.noreply.github.com"}
+    {name = "pineOapple", email = "44525727+pineOapple@users.noreply.github.com"}
 ]
 readme = "README.md"
 license = "MIT"
@@ -24,7 +24,6 @@ dependencies = [
     "verboselogs>=1",
 ]
 
-
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
@@ -40,8 +39,11 @@ exclude = [
     "docs/_build",
 ]
 
-
 [tool.poetry.group.dev.dependencies]
 sphinx = "^8.2.3"
 myst-parser = "^4.0.1"
 
+[tool.poetry-dynamic-versioning]
+enable = true
+vcs = "git"
+style = "pep440"
