you know what? fensap works lol

--- a/glacium/config/defaults/global_default.yaml
+++ b/glacium/config/defaults/global_default.yaml
@@ -31,7 +31,7 @@ PWS_PSI_ALPHA_END: 10
 PWS_PSI_ALPHA_STEP: 1
 PWS_PROF_PATH: ../_data/AH63K127_processed.dat
 PWS_GRID_PATH: ../mesh/GCI.cas
-PWS_PROJ_PATH: ../mesh/GCI.pw
+PWS_PROJ_PATH: ../pointwise/GCI.pw
 PWS_CHORD_LENGTH: 0.431
 PWS_SPLIT_PERCENTAGE: 0.4
 PWS_FF_FACTOR: 20
