--- a/glacium/config/defaults/global_default.yaml
+++ b/glacium/config/defaults/global_default.yaml
@@ -121,7 +121,7 @@ ICE_CRYSTAL_FILE: ../run_DROP3D/crystal
 ICE_DISPLACED_GRID_FILE: GCI.grid.disp
 ICE_DROPLET_FILE: ../run_DROP3D/droplet
 ICE_FORCE_FILE: null
-ICE_GRID_FILE: ../GCI.grid
+ICE_GRID_FILE: ../mesh/GCI.grid
 ICE_GUI_USE_FORCE_FILE: 0
 ICE_GUI_USE_RESTART_FILE: 0
 ICE_INPUT_FORMAT: 1
