Functioning version, almost deleted the good stuff.

--- a/glacium/config/defaults/global_default.yaml
+++ b/glacium/config/defaults/global_default.yaml
@@ -51,6 +51,7 @@ PWS_TREX_MAX_LAYERS: 500
 PWS_TREX_FULL_LAYERS: 10
 PWS_TREX_GROWTH_RATE_ATTR: 1.15
 PWS_SIZE_FIELD_DECAY: 0.95
+PWS_EXTRUSION_Z_DISTANCE: 0.0431
 FSP_FILES_GRID: ../mesh/GCI.grid
 ICE_RECOVERY_FACTOR: 0.9
 ICE_REF_AIR_PRESSURE: 101.325
