--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "jinja2>=3",
     "coloredlogs>=15",
     "verboselogs>=1",
+    "lambda-explorer>=1.0",
 ]
 
 [build-system]
