Flatten Hydra defaults

--- a/glacium/conf/config.yaml
+++ b/glacium/conf/config.yaml
@@ -1,12 +1,12 @@
 defaults:
-  - pws: default
-  - pointwise: default
-  - fensap: default
-  - fluent2fensap: default
-  - xfoil: default
-  - fsp: default
-  - ice: default
-  - glb: default
-  - smc: default
-  - msh: default
-  - drp: default
+  - pws@_global_: default
+  - pointwise@_global_: default
+  - fensap@_global_: default
+  - fluent2fensap@_global_: default
+  - xfoil@_global_: default
+  - fsp@_global_: default
+  - ice@_global_: default
+  - glb@_global_: default
+  - smc@_global_: default
+  - msh@_global_: default
+  - drp@_global_: default
