Migrate config YAMLs to Hydra templates

--- a/glacium/conf/config.yaml
+++ b/glacium/conf/config.yaml
@@ -10,3 +10,24 @@ defaults:
   - smc@_global_: default
   - msh@_global_: default
   - drp@_global_: default
+  - templates/FENSAP.DROP3D.files
+  - templates/FENSAP.DROP3D.par
+  - templates/FENSAP.FENSAP.files
+  - templates/FENSAP.FENSAP.par
+  - templates/FENSAP.ICE3D.custom_remeshing.sh
+  - templates/FENSAP.ICE3D.files
+  - templates/FENSAP.ICE3D.meshingSizes.scm
+  - templates/FENSAP.ICE3D.par
+  - templates/FENSAP.ICE3D.remeshing.jou
+  - templates/FENSAP.solvercmd
+  - templates/POINTWISE.GCI.glf
+  - templates/POINTWISE.run_pointwise.sh
+  - templates/VSZ.profiles.vsz
+  - templates/XFOIL.boundarylayer.in
+  - templates/XFOIL.increasepoints.in
+  - templates/XFOIL.polars.in
+  - templates/XFOIL.run_xfoil.sh
+  - templates/XFOIL.suctioncurve.in
+  - templates/XFOIL.thickenTE.in
+  - templates/global_default
+  - templates/mapping
