--- a/glacium/conf/templates/mapping.yaml
+++ b/glacium/conf/templates/mapping.yaml
@@ -1,3 +1,4 @@
+package: ""
 pointwise:
   POINTWISE.GCI.glf.j2:               mesh/GCI.glf
   POINTWISE.run_pointwise.sh.j2:      mesh/run_pointwise.sh
