--- a/glacium/conf/templates/XFOIL.polars.in.yaml
+++ b/glacium/conf/templates/XFOIL.polars.in.yaml
@@ -1,3 +1,4 @@
+package: ""
 PWS_AIRFOIL_FILE: ../profiles/airfoil.dat
 PWS_PROFILE1: ../profiles/densened.dat
 PWS_PROFILE2: ../profiles/thickened.dat
