FIX: None values from config NULL

--- a/glacium/conf/templates/global_default.yaml
+++ b/glacium/conf/templates/global_default.yaml
@@ -115,13 +115,13 @@ ICE_IPS_LOAD: 0
 ICE_OUTPUT_FORMAT: 1
 ICE_TIME_STEP_BETWEEN_OUTPUT: 420000
 ICE_AIR_FILE: ../run_FENSAP/soln
-ICE_ANTI_ICING_FILE: null
+ICE_ANTI_ICING_FILE: "NULL"
 ICE_CHT3D_FORMAT: 1
 ICE_CONVERGENCE_FILE: iceconv.dat
 ICE_CRYSTAL_FILE: ../run_DROP3D/crystal
 ICE_DISPLACED_GRID_FILE: GCI.grid.disp
 ICE_DROPLET_FILE: ../run_DROP3D/droplet
-ICE_FORCE_FILE: null
+ICE_FORCE_FILE: "NULL"
 ICE_GRID_FILE: ../mesh/GCI.grid
 ICE_GUI_USE_FORCE_FILE: 0
 ICE_GUI_USE_RESTART_FILE: 0
@@ -132,7 +132,7 @@ ICE_OUTPUT_GRID: ice.grid
 ICE_OUTPUT_MAP: map.grid
 ICE_OUTPUT_STL: ice.stl
 ICE_OUTPUT_TIN: ice.tin
-ICE_RESTART_FILE: null
+ICE_RESTART_FILE: "NULL"
 ICE_SOLUTION_FILE: swimsol
 ICE_AIR_CP: 1005
 ICE_BOLTZMANN: 5.67e-08
