--- a/glacium/conf/templates/POINTWISE.GCI.glf.yaml
+++ b/glacium/conf/templates/POINTWISE.GCI.glf.yaml
@@ -21,3 +21,4 @@ PWS_TREX_MAX_LAYERS: 500
 PWS_TREX_FULL_LAYERS: 10
 PWS_TREX_GROWTH_RATE_ATTR: 1.15
 PWS_SIZE_FIELD_DECAY: 0.95
+PWS_EXTRUSION_Z: 0.0431
