--- a/glacium/conf/config.yaml
+++ b/glacium/conf/config.yaml
@@ -18,6 +18,12 @@ defaults:
   - templates/FENSAP.ICE3D.files
   - templates/FENSAP.ICE3D.meshingSizes.scm
   - templates/FENSAP.ICE3D.par
+  - templates/MULTISHOT.config.par
+  - templates/MULTISHOT.fensap.par
+  - templates/MULTISHOT.drop.par
+  - templates/MULTISHOT.ice.par
+  - templates/MULTISHOT.solvercmd.par
+  - templates/MULTISHOT.files.par
   - templates/FENSAP.ICE3D.remeshing.jou
   - templates/FENSAP.FENSAP.solvercmd
   - templates/FENSAP.DROP3D.solvercmd
