--- a/glacium/config/defaults/global_default.yaml
+++ b/glacium/config/defaults/global_default.yaml
@@ -177,30 +177,30 @@ ICE_GUI_NCPU_MESHING: 10
 ICE_GUI_REMESHING_OPTION: 0
 ICE_FILE_GRID_TIMESTAMP: 677104865
 ICE_INPUT_FILE_VERSION: 202
-MSH_GLOBMIN: 0.002
-MSH_PROXMIN: 0.002
-MSH_CURVMIN: 0.002
-MSH_CURVMAX: 0.2
-MSH_GLOBMAX: 2.0
-MSH_NPRISMS: 26
-MSH_FIRSTCELLHEIGHT: 1e-6
-MSH_MPX: 1.0
-MSH_MPY: 1.0
-MSH_MPZ: 1.0
-MSH_PARALLEL_TET_BETA: true
-MSH_ROTATIONAL_PERIODIC: false
+MSH_GLOBMIN: 0.0000045
+MSH_PROXMIN: 0.0003
+MSH_CURVMIN: 0.00012
+MSH_CURVMAX: 0.005
+MSH_GLOBMAX: 0.125
+MSH_NPRISMS: 45
+MSH_FIRSTCELLHEIGHT: 0.0000045
+MSH_MPX: 0.44
+MSH_MPY: 0
+MSH_MPZ: 0.0431
+MSH_PARALLEL_TET_BETA: "#t"
+MSH_ROTATIONAL_PERIODIC: "#f"
 MSH_PERIODIC_ANGLE: 0
-MSH_PERIODIC_AXIS_X: 1
+MSH_PERIODIC_AXIS_X: 0
 MSH_PERIODIC_AXIS_Y: 0
-MSH_PERIODIC_AXIS_Z: 0
-MSH_PERIODIC_ZONES: zone5*
-MSH_TRANSLATIONAL_PERIODIC: false
+MSH_PERIODIC_AXIS_Z: 1
+MSH_PERIODIC_ZONES: "zone5*"
+MSH_TRANSLATIONAL_PERIODIC: "#f"
 MSH_PERIODIC_TRANSLATION_VX: 0
 MSH_PERIODIC_TRANSLATION_VY: 0
 MSH_PERIODIC_TRANSLATION_VZ: -0.1
-MSH_PERIODIC_TRANSLATION_ZONES: zone5*
-MSH_REMESH_2D: false
-MSH_Z_SPAN: 1
+MSH_PERIODIC_TRANSLATION_ZONES: "zone5*"
+MSH_REMESH_2D: "#t"
+MSH_Z_SPAN: 0.0862
 FSP_CHARAC_LENGTH: 0.431
 DRP_GUI_CFL: 20
 FSP_DIMENSIONAL_TIME_STEP: 0
