--- a/glacium/config/defaults/global_default.yaml
+++ b/glacium/config/defaults/global_default.yaml
@@ -118,11 +118,11 @@ ICE_AIR_FILE: ../run_FENSAP/soln
 ICE_ANTI_ICING_FILE: "NULL"
 ICE_CHT3D_FORMAT: 1
 ICE_CONVERGENCE_FILE: iceconv.dat
-ICE_CRYSTAL_FILE: "../run_DROP3D/crystal"
+ICE_CRYSTAL_FILE: ../run_DROP3D/crystal
 ICE_DISPLACED_GRID_FILE: GCI.grid.disp
-ICE_DROPLET_FILE: "../run_DROP3D/droplet"
+ICE_DROPLET_FILE: ../run_DROP3D/droplet
 ICE_FORCE_FILE: "NULL"
-ICE_GRID_FILE: "../mesh/GCI.grid"
+ICE_GRID_FILE: ../mesh/GCI.grid
 ICE_GUI_USE_FORCE_FILE: 0
 ICE_GUI_USE_RESTART_FILE: 0
 ICE_INPUT_FORMAT: 1
