--- a/glacium/config/defaults/global_default.yaml
+++ b/glacium/config/defaults/global_default.yaml
@@ -1,38 +1,63 @@
+# Executables
+POINTWISE_BIN: "C:/Program Files/Cadence/FidelityPointwise2023.2.3/win64/bin/tclsh.exe"
+FENSAP_BIN: "C:\\Program Files\\ANSYS Inc\\v251\\fensapice\\bin\\nti_sh.exe"
+FLUENT2FENSAP_EXE: "C:/Program Files/ANSYS Inc/v251/fensapice/bin/fluent2fensap.exe"
+
+# XFOIL: paths
 PWS_AIRFOIL_FILE: ../_data/AH63K127.dat
 PWS_PROFILE1: ../_data/AH63K127_densened.dat
 PWS_PROFILE2: ../_data/AH63K127_thickened.dat
 PWS_POLAR_FILE: pol_output.pol
 PWS_SUCTION_FILE: psi_output.pol
-POINTWISE_BIN: "C:/Program Files/Cadence/FidelityPointwise2023.2.3/win64/bin/tclsh.exe"
-FENSAP_BIN: "C:\\Program Files\\ANSYS Inc\\v251\\fensapice\\bin\\nti_sh.exe"
-FLUENT2FENSAP_EXE: "C:/Program Files/ANSYS Inc/v251/fensapice/bin/fluent2fensap.exe"
 XFOIL_REFINE_OUT: refined.dat
 XFOIL_THICKEN_OUT: thick.dat
 XFOIL_BOUNDARY_OUT: bnd.dat
 XFOIL_POLAR_OUT: polars.dat
 XFOIL_SUCTION_OUT: psi.dat
 
-PWS_INI_NUM_PANELS: 400
-PWS_INI_TE_YPLUS: 0.0005
-PWS_INI_TE_YMINUS: -0.0005
-PWS_TE_GAP: 0.00232018561
-PWS_TE_BLENDING: 0.6
-PWS_POL_REYNOLDS: 1.47e6
-PWS_POL_MACH: 0.15
-PWS_POL_ITER: 100
-PWS_POL_ALPHA_START: -2
-PWS_POL_ALPHA_END: 10
-PWS_POL_ALPHA_STEP: 1
-PWS_PSI_REYNOLDS: 1.47e6
-PWS_PSI_MACH: 0.15
-PWS_PSI_ITER: 100
-PWS_PSI_ALPHA_START: 4
-PWS_PSI_ALPHA_END: 10
-PWS_PSI_ALPHA_STEP: 1
+# Pointwise: paths
 PWS_PROF_PATH: ../_data/AH63K127_processed.dat
 PWS_GRID_PATH: ../mesh/GCI.cas
 PWS_PROJ_PATH: GCI.pw
+
+# [CASE]: very important
+CASE_CHORD_LENGTH: None
+CASE_VELOCITY: None
+CASE_TEMPERATURE: None
+CASE_MVD: None
+CASE_LWC: None
+CASE_YPLUS: None
+
+# XFOIL: [IMPORTANT] - config
 PWS_CHORD_LENGTH: 0.431
+
+# XFOIL: [CALC]
+PWS_TE_GAP: 0.00232018561
+PWS_POL_REYNOLDS: 1.47e6
+PWS_PSI_REYNOLDS: 1.47e6
+PWS_POL_MACH: 0.15
+PWS_PSI_MACH: 0.15
+
+# XFOIL: [don't bother]
+PWS_POL_ALPHA_START: -2
+PWS_POL_ALPHA_END: 10
+PWS_POL_ALPHA_STEP: 1
+PWS_PSI_ALPHA_START: 4
+PWS_PSI_ALPHA_END: 10
+PWS_PSI_ALPHA_STEP: 1
+PWS_INI_NUM_PANELS: 400
+PWS_TE_BLENDING: 0.6
+PWS_POL_ITER: 100
+PWS_PSI_ITER: 100
+
+# Pointwise: [IMPORTANT] - config
+PWS_REFINEMENT: 16
+
+# Pointwise: [CALC]
+PWS_TREX_FIRST_HEIGHT: 1.8026e-06
+PWS_EXTRUSION_Z_DISTANCE: 0.0431
+
+# Pointwise: [don't bother]
 PWS_SPLIT_PERCENTAGE: 0.4
 PWS_FF_FACTOR: 20
 PWS_FF_DIMENSION: 600
@@ -44,15 +69,39 @@ PWS_LOWER_BACK_DIM: 160
 PWS_TE_DIM: 8
 PWS_SPACING_1: 0.0001
 PWS_SPACING_2: 0.0001
-PWS_REFINEMENT: 16
-PWS_TREX_FIRST_HEIGHT: 1.8026e-06
 PWS_TREX_GROWTH_RATE_COND: 1.15
 PWS_TREX_MAX_LAYERS: 500
 PWS_TREX_FULL_LAYERS: 10
 PWS_TREX_GROWTH_RATE_ATTR: 1.15
 PWS_SIZE_FIELD_DECAY: 0.95
-PWS_EXTRUSION_Z_DISTANCE: 0.0431
-FSP_FILES_GRID: ../mesh/GCI.grid
+
+# Fluent remeshing: [CALC]
+MSH_GLOBMIN: 0.0000045
+MSH_PROXMIN: 0.0003
+MSH_CURVMIN: 0.00012
+MSH_CURVMAX: 0.005
+MSH_GLOBMAX: 0.125
+MSH_NPRISMS: 45
+MSH_FIRSTCELLHEIGHT: 0.0000045
+MSH_MPX: 0.44
+MSH_MPY: 0
+MSH_MPZ: 0.0431
+MSH_PARALLEL_TET_BETA: "#t"
+MSH_ROTATIONAL_PERIODIC: "#f"
+MSH_PERIODIC_ANGLE: 0
+MSH_PERIODIC_AXIS_X: 0
+MSH_PERIODIC_AXIS_Y: 0
+MSH_PERIODIC_AXIS_Z: 1
+MSH_PERIODIC_ZONES: "zone5*"
+MSH_TRANSLATIONAL_PERIODIC: "#f"
+MSH_PERIODIC_TRANSLATION_VX: 0
+MSH_PERIODIC_TRANSLATION_VY: 0
+MSH_PERIODIC_TRANSLATION_VZ: -0.1
+MSH_PERIODIC_TRANSLATION_ZONES: "zone5*"
+MSH_REMESH_2D: "#t"
+MSH_Z_SPAN: 0.0862
+
+# FENSAP ICE
 ICE_RECOVERY_FACTOR: 0.9
 ICE_REF_AIR_PRESSURE: 101.325
 ICE_REF_TEMPERATURE: 14.85
@@ -137,13 +186,6 @@ ICE_SOLUTION_FILE: swimsol
 ICE_AIR_CP: 1005
 ICE_BOLTZMANN: 5.67e-08
 ICE_TIME_SCHEME: 0
-FSP_BC_SUBTYPE: 3 2 0 0
-FSP_GUI_BC_SCREEN_MODE: 3 0 1 0
-FSP_GUI_BC_SURFACE_TYPE_FLAG: 3 0 0 0
-FSP_QD: 3 0 0 0
-FSP_QSWIT: 3 0 1 0
-FSP_TS: 3 288 0 0
-FSP_WIRE_SPACING: 3 0 0 0
 ICE_BC_FAMILY: 0
 ICE_GRID_FILE_WALL_ZONES: 0
 ICE_GUI_BCLIST: 3 1000 2000 4300
@@ -177,32 +219,16 @@ ICE_GUI_NCPU_MESHING: 10
 ICE_GUI_REMESHING_OPTION: 0
 ICE_FILE_GRID_TIMESTAMP: 677104865
 ICE_INPUT_FILE_VERSION: 202
-MSH_GLOBMIN: 0.0000045
-MSH_PROXMIN: 0.0003
-MSH_CURVMIN: 0.00012
-MSH_CURVMAX: 0.005
-MSH_GLOBMAX: 0.125
-MSH_NPRISMS: 45
-MSH_FIRSTCELLHEIGHT: 0.0000045
-MSH_MPX: 0.44
-MSH_MPY: 0
-MSH_MPZ: 0.0431
-MSH_PARALLEL_TET_BETA: "#t"
-MSH_ROTATIONAL_PERIODIC: "#f"
-MSH_PERIODIC_ANGLE: 0
-MSH_PERIODIC_AXIS_X: 0
-MSH_PERIODIC_AXIS_Y: 0
-MSH_PERIODIC_AXIS_Z: 1
-MSH_PERIODIC_ZONES: "zone5*"
-MSH_TRANSLATIONAL_PERIODIC: "#f"
-MSH_PERIODIC_TRANSLATION_VX: 0
-MSH_PERIODIC_TRANSLATION_VY: 0
-MSH_PERIODIC_TRANSLATION_VZ: -0.1
-MSH_PERIODIC_TRANSLATION_ZONES: "zone5*"
-MSH_REMESH_2D: "#t"
-MSH_Z_SPAN: 0.0862
+
+FSP_FILES_GRID: ../mesh/GCI.grid
+FSP_BC_SUBTYPE: 3 2 0 0
+FSP_GUI_BC_SCREEN_MODE: 3 0 1 0
+FSP_GUI_BC_SURFACE_TYPE_FLAG: 3 0 0 0
+FSP_QD: 3 0 0 0
+FSP_QSWIT: 3 0 1 0
+FSP_TS: 3 288 0 0
+FSP_WIRE_SPACING: 3 0 0 0
 FSP_CHARAC_LENGTH: 0.431
-DRP_GUI_CFL: 20
 FSP_DIMENSIONAL_TIME_STEP: 0
 FSP_GUI_CFL: 300
 FSP_GUI_DROP_MAX_TIME_STEPS_PER_CYCLE: 120
@@ -213,7 +239,6 @@ FSP_MAX_NEWTON_ITERATIONS_PER_CYCLE: 1
 FSP_MAX_TIME_STEPS_PER_CYCLE: 10
 FSP_TIME_ACCURATE_SCHEME_ORDER: -1
 FSP_TOTAL_SIMULATION_TIME: 1
-DRP_GUI_ARTIFICIAL_VISCOSITY_IN_RESIDUAL: 1e-5
 FSP_ARTIFICIAL_VISCOSITY_IN_RESIDUAL: 1 1e-07
 FSP_CYCLES_CONVERGENCE_CUTOFF: 1 1e-10
 FSP_GUI_CYCLE1_AV_CUTOFF: 1e-10
@@ -237,6 +262,8 @@ GLB_GUI_APPENDIX_SWITCH: 0
 FSP_VELOCITY_X: 50
 FSP_VELOCITY_Y: 0
 FSP_VELOCITY_Z: 0
+DRP_GUI_ARTIFICIAL_VISCOSITY_IN_RESIDUAL: 1e-5
+DRP_GUI_CFL: 20
 DRP_GUI_INITIAL_TYPE: 0
 FSP_DROPLET_INITIAL_VEL: 3 0 0 0
 FSP_GUI_DROPLET_INITIAL_VEL_COMP_X: 0
