--- a/glacium/config/defaults/global_default.yaml
+++ b/glacium/config/defaults/global_default.yaml
@@ -440,7 +440,12 @@ FSP_SOLUTION_PRINTOUT_FOR_INITIAL_GUESS: 1
 FSP_SOLUTION_PRINTOUT_FOR_NEWTON_ITERATIONS: 1
 FSP_SOLUTION_PRINTOUT_FOR_PARAMETER_CYCLES: 1
 FSP_SOLUTION_PRINTOUT_FOR_TIME_STEPS: 1
-FSP_GUI_DRAG_DIRECTION: 0
+FSP_DRAG_VECTOR_COMPONENT_X: 0.99756405026
+FSP_DRAG_VECTOR_COMPONENT_Y: 0.0697564737441
+FSP_DRAG_VECTOR_COMPONENT_Z: 0
+FSP_GUI_DRAG_BC: 1000
+FSP_GUI_DRAG_DIRECTION: 2
+FSP_LIFT_AXIS: 2
 FSP_MOMENTS_REFERENCE_POINT_COMPONENT_X: 0
 FSP_MOMENTS_REFERENCE_POINT_COMPONENT_Y: 0
 FSP_MOMENTS_REFERENCE_POINT_COMPONENT_Z: 0
