--- a/glacium/config/defaults/global_default.yaml
+++ b/glacium/config/defaults/global_default.yaml
@@ -3,6 +3,9 @@ POINTWISE_BIN: "C:/Program Files/Cadence/FidelityPointwise2023.2.3/win64/bin/tcl
 FENSAP_BIN: "C:\\Program Files\\ANSYS Inc\\v251\\fensapice\\bin\\nti_sh.exe"
 FLUENT2FENSAP_EXE: "C:/Program Files/ANSYS Inc/v251/fensapice/bin/fluent2fensap.exe"
 
+# CPU
+N_CPU: 4
+
 # XFOIL: paths
 PWS_AIRFOIL_FILE: ../_data/AH63K127.dat
 PWS_PROFILE1: ../_data/AH63K127_densened.dat
@@ -17,7 +20,7 @@ XFOIL_SUCTION_OUT: psi.dat
 
 # Pointwise: paths
 PWS_PROF_PATH: ../_data/AH63K127_processed.dat
-PWS_GRID_PATH: ../mesh/GCI.cas
+PWS_GRID_PATH: ../mesh/mesh.cas
 PWS_PROJ_PATH: GCI.pw
 
 # XFOIL: [IMPORTANT] - config
