FEAT: N_CPU+GLB_GRID

--- a/glacium/config/defaults/global_default.yaml
+++ b/glacium/config/defaults/global_default.yaml
@@ -21,6 +21,8 @@ XFOIL_SUCTION_OUT: psi.dat
 # Pointwise: paths
 PWS_PROF_PATH: ../_data/AH63K127_processed.dat
 PWS_GRID_PATH: ../mesh/mesh.cas
+GLB_FILE_GRID: ../mesh/mesh.grid
+
 PWS_PROJ_PATH: GCI.pw
 
 # XFOIL: [IMPORTANT] - config
@@ -215,7 +217,6 @@ ICE_GUI_REMESHING_OPTION: 0
 ICE_FILE_GRID_TIMESTAMP: 677104865
 ICE_INPUT_FILE_VERSION: 202
 
-FSP_FILES_GRID: ../mesh/GCI.grid
 FSP_BC_SUBTYPE: 3 2 0 0
 FSP_GUI_BC_SCREEN_MODE: 3 0 1 0
 FSP_GUI_BC_SURFACE_TYPE_FLAG: 3 0 0 0
