--- a/glacium/config/defaults/global_default.yaml
+++ b/glacium/config/defaults/global_default.yaml
@@ -24,6 +24,7 @@ XFOIL_SUCTION_OUT: psi.dat
 PWS_PROF_PATH: ../_data/AH63K127_processed.dat
 PWS_GRID_PATH: ../mesh/mesh.cas
 GLB_FILE_GRID: ../mesh/mesh.grid
+ICE_GRID_FILE: ../mesh/mesh.grid
 
 PWS_PROJ_PATH: GCI.pw
 
@@ -167,10 +168,9 @@ ICE_ANTI_ICING_FILE: "NULL"
 ICE_CHT3D_FORMAT: 1
 ICE_CONVERGENCE_FILE: iceconv.dat
 ICE_CRYSTAL_FILE: ../run_DROP3D/crystal
-ICE_DISPLACED_GRID_FILE: GCI.grid.disp
+ICE_DISPLACED_GRID_FILE: mesh.grid.disp
 ICE_DROPLET_FILE: ../run_DROP3D/droplet
 ICE_FORCE_FILE: "NULL"
-ICE_GRID_FILE: ../mesh/GCI.grid
 ICE_GUI_USE_FORCE_FILE: 0
 ICE_GUI_USE_RESTART_FILE: 0
 ICE_INPUT_FORMAT: 1
