--- a/glacium/config/defaults/global_default.yaml
+++ b/glacium/config/defaults/global_default.yaml
@@ -5,8 +5,11 @@ FLUENT2FENSAP_EXE: "C:/Program Files/ANSYS Inc/v251/fensapice/bin/fluent2fensap.
 
 # CPU
 N_CPU: 4
-FSP_MAX_TIME_STEPS_PER_CYCLE: 10
-FSP_GUI_FENSAP_MAX_TIME_STEPS_PER_CYCLE: 10
+FSP_MAX_TIME_STEPS_PER_CYCLE: 1
+FSP_GUI_FENSAP_MAX_TIME_STEPS_PER_CYCLE: 1
+FSP_GUI_CFL: 300
+DRP_GUI_CFL: 20
+FSP_GUI_DROP_MAX_TIME_STEPS_PER_CYCLE: 120
 
 # XFOIL: paths
 PWS_AIRFOIL_FILE: ../_data/AH63K127.dat
@@ -141,6 +144,7 @@ ICE_CRYSTAL_COEFFICIENT: 10 0 0 0.05 0 0.12 0.43 0.2 0.43 0.32 0
 ICE_CRYSTAL_CONTENT: 0.003
 ICE_DEPOSITION_VARIANT: 1
 ICE_AUTOMATIC_TIME_STEP: 1
+ICE_BEAD_FLAG: 1
 ICE_BC_SINK: 0
 ICE_CHARAC_LENGTH: 1
 ICE_FLUX_CHOICE: 1
@@ -151,11 +155,13 @@ ICE_GUI_GRID_OUTPUT_FLAG: 1
 ICE_GUI_INITIAL_TIME: 0
 ICE_GUI_TOTAL_TIME: 420.0
 ICE_MIN_CONCAVE_ANGLE: 70
+ICE_MODEL_BEAD: 1
 ICE_NB_SINK: 0
 ICE_NUMBER_TIME_STEP: 420000
 ICE_SHAPE_SMOOTHING_ITERATIONS: 0
 ICE_SURFACE_THICKNESS_METHOD: 1
 ICE_TIME_STEP: 0.001
+ICE_WRITE_SURFACE_ROUGHNESS_FILE_FLAG: 5
 SMC_FILL_IN_ALLOWED_IN_PRECONDITIONING_MATRIX: 1 3
 SMC_PRECONDITIONER: 1 1
 ICE_GUI_NUMBERED_OUTPUT: 0
@@ -182,6 +188,7 @@ ICE_OUTPUT_STL: ice.stl
 ICE_OUTPUT_TIN: ice.tin
 ICE_RESTART_FILE: "NULL"
 ICE_SOLUTION_FILE: swimsol
+ICE_SURFACE_ROUGHNESS_FILE: roughness.dat
 ICE_AIR_CP: 1005
 ICE_BOLTZMANN: 5.67e-08
 ICE_TIME_SCHEME: 0
@@ -190,9 +197,9 @@ ICE_GRID_FILE_WALL_ZONES: 0
 ICE_GUI_BCLIST: 3 1000 2000 4300
 ICE_GUI_BCWALL_FLAG: 3 0 1 0
 ICE_GUI_BCWALL_HFLUX_FLAG: 3 0 0 0
-ICE_GUI_BC_COLORS_B: 0
-ICE_GUI_BC_COLORS_G: 0
-ICE_GUI_BC_COLORS_R: 0
+ICE_GUI_BC_COLORS_B: 3 0 128 255
+ICE_GUI_BC_COLORS_G: 3 53 0 255
+ICE_GUI_BC_COLORS_R: 3 53 128 0
 ICE_GUI_BC_HFLUX: 3 "" "" ""
 ICE_GUI_BC_NAMES: 3 "BC_1000" "BC_2000" "BC_4300"
 ICE_GUI_CONDITIONS_COPIED: 1
@@ -228,8 +235,6 @@ FSP_TS: 3 288 0 0
 FSP_WIRE_SPACING: 3 0 0 0
 FSP_CHARAC_LENGTH: 0.431
 FSP_DIMENSIONAL_TIME_STEP: 0
-FSP_GUI_CFL: 300
-FSP_GUI_DROP_MAX_TIME_STEPS_PER_CYCLE: 120
 FSP_GUI_VARIABLE_RELAXATION: 1
 FSP_INVERSE_CFL: 0.00333333333333
 FSP_MAX_NEWTON_ITERATIONS_PER_CYCLE: 1
@@ -241,7 +246,7 @@ FSP_CYCLES_CONVERGENCE_CUTOFF: 1 1e-10
 FSP_GUI_CYCLE1_AV_CUTOFF: 1e-10
 FSP_NUMBER_OF_PARAMETER_CYCLES: 1
 FSP_RELAXATION_FACTOR_FOR_K_EPSILON_TURBULENCE_MODEL: 1 1
-FSP_DROPLET_EQUATIONS: 1
+FSP_DROPLET_EQUATIONS: 2
 FSP_ENERGY_EQUATION: 1
 FSP_GOVERNING_EQUATIONS: 8
 FSP_GUI_SOLVER_MODE: 0
@@ -259,9 +264,10 @@ GLB_GUI_APPENDIX_SWITCH: 0
 FSP_VELOCITY_X: 50
 FSP_VELOCITY_Y: 0
 FSP_VELOCITY_Z: 0
+FSP_ANGLE_OF_ATTACK_ALPHA: 4
 DRP_GUI_ARTIFICIAL_VISCOSITY_IN_RESIDUAL: 1e-5
-DRP_GUI_CFL: 20
 DRP_GUI_INITIAL_TYPE: 0
+DRP_GUI_ANGLE_OF_ATTACK_ALPHA: 4
 FSP_DROPLET_INITIAL_VEL: 3 0 0 0
 FSP_GUI_DROPLET_INITIAL_VEL_COMP_X: 0
 FSP_GUI_DROPLET_INITIAL_VEL_COMP_Y: 0
@@ -396,7 +402,7 @@ FSP_RADIAL_EQUILIBRIUM_ITER_START: 3 0 0 0
 FSP_RAD_EQ_PRESS_END: 3 101325 101325 101325
 FSP_RAD_EQ_PRESS_START: 3 101325 101325 101325
 FSP_FILE_GRID_TIMESTAMP: 676506483
-FSP_REF_AREA: 0.431
+FSP_REF_AREA: None
 FSP_GUI_CFLADAPT: 0
 FSP_GUI_TIME_ACCURATE_SCHEME_ORDER: -1
 FSP_RLXITER: 300
@@ -424,13 +430,15 @@ FSP_ROT_FUSELAGE_OPTION: 0
 FSP_ROT_SPEED: 0
 FSP_TUR_MAX_SOLVER_ITERATIONS: 8
 FSP_GUI_RELAXATION_FACTOR_FOR_TURBULENCE: 1
-FSP_GUI_ROUGHNESS_TYPE: 0
+FSP_DIMENSIONAL_WALL_ROUGHNESS: 0.001
+FSP_GUI_ROUGHNESS_TYPE: 1
 FSP_GUI_TRANSITION_FLAG: 0
 FSP_GUI_TURBULENCE_SWITCH: 1
 FSP_TURBULENCE_MODEL_ITERATIONS: 1
 FSP_TURBULENT_TO_LAMINAR_VISCOSITY_RATIO: 1e-05
 FSP_ALE_LEVELS_OF_ELEMENTS_AROUND_BODY: 0
 FSP_GUI_ALE_MODE: -1
+FSP_WALL_ROUGHNESS_SWITCH: 1
 FSP_GUI_ITERATIONS_BETWEEN_PRINTOUTS: 1
 FSP_GUI_PRINTOUT_MODE: 0
 FSP_GUI_SOLUTION_PRINTOUT_FOR_TIME_STEPS: 0
