--- a/glacium/config/defaults/global_default.yaml
+++ b/glacium/config/defaults/global_default.yaml
@@ -4,12 +4,12 @@ FENSAP_BIN: "C:\\Program Files\\ANSYS Inc\\v251\\fensapice\\bin\\nti_sh.exe"
 FLUENT2FENSAP_EXE: "C:/Program Files/ANSYS Inc/v251/fensapice/bin/fluent2fensap.exe"
 
 # CPU
-N_CPU: 4
+N_CPU: 10
 FSP_MAX_TIME_STEPS_PER_CYCLE: 1
 FSP_GUI_FENSAP_MAX_TIME_STEPS_PER_CYCLE: 1
-FSP_GUI_CFL: 300
-DRP_GUI_CFL: 20
-FSP_GUI_DROP_MAX_TIME_STEPS_PER_CYCLE: 120
+FSP_GUI_CFL: 300 #300
+DRP_GUI_CFL: 20 #20
+FSP_GUI_DROP_MAX_TIME_STEPS_PER_CYCLE: 1 #120
 
 # XFOIL: paths
 PWS_AIRFOIL_FILE: ../_data/AH63K127.dat
