--- a/glacium/config/defaults/global_default.yaml
+++ b/glacium/config/defaults/global_default.yaml
@@ -79,14 +79,14 @@ PWS_TREX_GROWTH_RATE_ATTR: 1.15
 PWS_SIZE_FIELD_DECAY: 0.95
 
 # Fluent remeshing: [CALC]
-MSH_GLOBMIN: 0.00000431
-MSH_PROXMIN: 0.0000431
-MSH_CURVMIN: 0.0001293
-MSH_CURVMAX: 0.000431
-MSH_GLOBMAX: 0.3
+MSH_GLOBMIN: 0.00003
+MSH_PROXMIN: 0.0003
+MSH_CURVMIN: 0.0003
+MSH_CURVMAX: 0.001
+MSH_GLOBMAX: 0.125
 MSH_NPRISMS: 45
-MSH_FIRSTCELLHEIGHT: 0.000002
-MSH_MPX: 0.44
+MSH_FIRSTCELLHEIGHT: 0.0000045
+MSH_MPX: 0.61
 MSH_MPY: 0
 MSH_MPZ: 0.0431
 MSH_PARALLEL_TET_BETA: "#t"
