--- a/glacium/config/defaults/global_default.yaml
+++ b/glacium/config/defaults/global_default.yaml
@@ -69,9 +69,9 @@ PWS_UPPER_FRONT_DIM: 160
 PWS_UPPER_BACK_DIM: 160
 PWS_LOWER_FRONT_DIM: 160
 PWS_LOWER_BACK_DIM: 160
-PWS_TE_DIM: 8
-PWS_SPACING_1: 0.0005
-PWS_SPACING_2: 0.0015
+PWS_TE_DIM: 4
+PWS_SPACING_1: 0.00008
+PWS_SPACING_2: 0.00024
 PWS_TREX_GROWTH_RATE_COND: 1.15
 PWS_TREX_MAX_LAYERS: 500
 PWS_TREX_FULL_LAYERS: 10
@@ -79,9 +79,9 @@ PWS_TREX_GROWTH_RATE_ATTR: 1.15
 PWS_SIZE_FIELD_DECAY: 0.95
 
 # Fluent remeshing: [CALC]
-MSH_GLOBMIN: 0.0000045
-MSH_PROXMIN: 0.0003
-MSH_CURVMIN: 0.00012
+MSH_GLOBMIN: 0.00003
+MSH_PROXMIN: 0.00045
+MSH_CURVMIN: 0.0003
 MSH_CURVMAX: 0.005
 MSH_GLOBMAX: 0.125
 MSH_NPRISMS: 45
