--- a/glacium/config/defaults/global_default.yaml
+++ b/glacium/config/defaults/global_default.yaml
@@ -9,7 +9,8 @@ FSP_MAX_TIME_STEPS_PER_CYCLE: 1
 FSP_GUI_FENSAP_MAX_TIME_STEPS_PER_CYCLE: 1
 FSP_GUI_CFL: 300 #300
 DRP_GUI_CFL: 20 #20
-FSP_GUI_DROP_MAX_TIME_STEPS_PER_CYCLE: 1 #120
+FSP_GUI_DROP_MAX_TIME_STEPS_PER_CYCLE: 200 #120
+SEQ_VALUE_VAR1: 10 15 15 15 15 15 30 30 30 60 60
 
 # XFOIL: paths
 PWS_AIRFOIL_FILE: ../_data/AH63K127.dat
