--- a/glacium/config/defaults/global_default.yaml
+++ b/glacium/config/defaults/global_default.yaml
@@ -5,11 +5,12 @@ FLUENT2FENSAP_EXE: "C:/Program Files/ANSYS Inc/v251/fensapice/bin/fluent2fensap.
 
 # CPU
 N_CPU: 32
-FSP_MAX_TIME_STEPS_PER_CYCLE: 700
-FSP_GUI_FENSAP_MAX_TIME_STEPS_PER_CYCLE: 700
+FSP_MAX_TIME_STEPS_PER_CYCLE: 1
+FSP_GUI_FENSAP_MAX_TIME_STEPS_PER_CYCLE: 1
 FSP_GUI_CFL: 300 #300
 DRP_GUI_CFL: 20 #20
-FSP_GUI_DROP_MAX_TIME_STEPS_PER_CYCLE: 120 #120
+FSP_GUI_DROP_MAX_TIME_STEPS_PER_CYCLE: 200 #120
+SEQ_VALUE_VAR1: 10 15 15 15 15 15 30 30 30 60 60
 
 # XFOIL: paths
 PWS_AIRFOIL_FILE: ../_data/AH63K127.dat
@@ -69,9 +70,9 @@ PWS_UPPER_FRONT_DIM: 160
 PWS_UPPER_BACK_DIM: 160
 PWS_LOWER_FRONT_DIM: 160
 PWS_LOWER_BACK_DIM: 160
-PWS_TE_DIM: 8
-PWS_SPACING_1: 0.0005
-PWS_SPACING_2: 0.0015
+PWS_TE_DIM: 4
+PWS_SPACING_1: 0.00008
+PWS_SPACING_2: 0.00024
 PWS_TREX_GROWTH_RATE_COND: 1.15
 PWS_TREX_MAX_LAYERS: 500
 PWS_TREX_FULL_LAYERS: 10
@@ -80,13 +81,13 @@ PWS_SIZE_FIELD_DECAY: 0.95
 
 # Fluent remeshing: [CALC]
 MSH_GLOBMIN: 0.00003
-MSH_PROXMIN: 0.0003
+MSH_PROXMIN: 0.00045
 MSH_CURVMIN: 0.0003
-MSH_CURVMAX: 0.001
+MSH_CURVMAX: 0.005
 MSH_GLOBMAX: 0.125
 MSH_NPRISMS: 45
 MSH_FIRSTCELLHEIGHT: 0.0000045
-MSH_MPX: 0.61
+MSH_MPX: 0.44
 MSH_MPY: 0
 MSH_MPZ: 0.0431
 MSH_PARALLEL_TET_BETA: "#t"
