--- a/glacium/config/defaults/global_default.yaml
+++ b/glacium/config/defaults/global_default.yaml
@@ -14,6 +14,7 @@ SEQ_VALUE_VAR1: 10 15 15 15 15 15 30 30 30 60 60
 MULTISHOT_COUNT: 10
 
 # XFOIL: paths
+# XFOIL: paths
 PWS_AIRFOIL_FILE: ../_data/AH63K127.dat
 PWS_PROFILE1: ../_data/AH63K127_densened.dat
 PWS_PROFILE2: ../_data/AH63K127_thickened.dat
@@ -205,6 +206,7 @@ ICE_GUI_BC_COLORS_R: 3 53 128 0
 ICE_GUI_BC_HFLUX: 3 "" "" ""
 ICE_GUI_BC_NAMES: 3 "BC_1000" "BC_2000" "BC_4300"
 ICE_GUI_CONDITIONS_COPIED: 1
+ICE_GUI_SEQ_TYPE: MULTI-FENSAPDROPICE
 ICE_GUI_MATLIST: 0
 ICE_GUI_WALL_OMX_DETECTED: 3 0 0 0
 ICE_GUI_WALL_OMY_DETECTED: 3 0 0 0
