--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,8 @@ dependencies = [
     "verboselogs>=1",
     "numpy>=1",
     "matplotlib>=3",
+    "fpdf2 (>=2.8.3,<3.0.0)",
+    "pypdf2 (>=3.0.1,<4.0.0)",
 ]
 
 [build-system]
