--- a/glacium/config/defaults/global_default.yaml
+++ b/glacium/config/defaults/global_default.yaml
@@ -12,7 +12,7 @@ DRP_GUI_CFL: 20 #20
 FSP_GUI_DROP_MAX_TIME_STEPS_PER_CYCLE: 200 #120
 SEQ_VALUE_VAR1: 10 15 15 15 15 15 30 30 30 60 60
 MULTISHOT_COUNT: 10
-
+CONVERGENCE_PDF: true
 # XFOIL: paths
 # XFOIL: paths
 PWS_AIRFOIL_FILE: ../_data/AH63K127.dat
