--- a/glacium/config/defaults/global_default.yaml
+++ b/glacium/config/defaults/global_default.yaml
@@ -11,7 +11,7 @@ FSP_GUI_CFL: 300 #300
 DRP_GUI_CFL: 20 #20
 FSP_GUI_DROP_MAX_TIME_STEPS_PER_CYCLE: 200 #120
 SEQ_VALUE_VAR1: 10 15 15 15 15 15 30 30 30 60 60
-MULTISHOT_COUNT: 10
+MULTISHOT_COUNT: 4
 CONVERGENCE_PDF: true
 # XFOIL: paths
 # XFOIL: paths
@@ -376,6 +376,7 @@ FSP_SUPG_COEF_1: 1
 FSP_SUPG_COEF_2: 1
 FSP_SUPG_TYPE: 3
 FSP_GUI_TURBULENCE_SWITCH_PREVIOUS: 1
+FSP_MAX_LAPLACE_ITERATIONS: 3
 FSP_RELAXATION_FACTOR_FOR_TURBULENCE: 1 1
 FSP_TURBULENCE_SWITCH: 1
 FSP_RIGID_MOTION_COEFFS: 17 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0
@@ -401,6 +402,7 @@ FSP_NPROBES: 0
 FSP_MAX_ENERGY_ITERATIONS_PER_CYCLE: 1
 FSP_MFLOW_RLX: 0.1
 FSP_GUI_REINJECTION_FLAG: 0
+FSP_GUI_NO_TIMEBC: 1
 FSP_RADIAL_EQUILIBRIUM_ITER_NUM: 3 0 0 0
 FSP_RADIAL_EQUILIBRIUM_ITER_START: 3 0 0 0
 FSP_RAD_EQ_PRESS_END: 3 101325 101325 101325
