Add CLI entry points for post-analysis modules

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,9 @@ build-backend = "poetry_dynamic_versioning.backend"
 
 [project.scripts]
 glacium = "glacium.cli:cli"
+glacium-cp = "glacium.post.analysis.cp:main"
+glacium-ice-thickness = "glacium.post.analysis.ice_thickness:main"
+glacium-ice-contours = "glacium.post.analysis.ice_contours:main"
 
 [tool.poetry]
 exclude = [
