Refactor cp2, expose contour tools, add deps and tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,8 @@ dependencies = [
     "verboselogs>=1",
     "numpy>=1",
     "matplotlib>=3",
+    "trimesh>=4",
+    "scipy>=1",
     "fpdf2 (>=2.8.3,<3.0.0)",
 ]
 
