--- a/glacium/config/defaults/global_default.yaml
+++ b/glacium/config/defaults/global_default.yaml
@@ -15,6 +15,8 @@ FSP_GUI_DROP_MAX_TIME_STEPS_PER_CYCLE: 1 #120
 SEQ_VALUE_VAR1: 10 15 15 15 15 15 30 30 30 60 60
 MULTISHOT_COUNT: 4
 CONVERGENCE_PDF: true
+ICE_GUI_TOTAL_TIME: 1200.0
+ICE_NUMBER_TIME_STEP: 1200000
 # XFOIL: paths
 # XFOIL: paths
 PWS_AIRFOIL_FILE: ../_data/AH63K127.dat
@@ -158,11 +160,10 @@ ICE_GROWTH_DIRECTION: 1
 ICE_GUI_CONCAVITY_FIX_FLAG: 1
 ICE_GUI_GRID_OUTPUT_FLAG: 1
 ICE_GUI_INITIAL_TIME: 0
-ICE_GUI_TOTAL_TIME: 420.0
 ICE_MIN_CONCAVE_ANGLE: 70
 ICE_MODEL_BEAD: 1
 ICE_NB_SINK: 0
-ICE_NUMBER_TIME_STEP: 420000
+
 ICE_SHAPE_SMOOTHING_ITERATIONS: 0
 ICE_SURFACE_THICKNESS_METHOD: 1
 ICE_TIME_STEP: 0.001
@@ -197,36 +198,36 @@ ICE_SURFACE_ROUGHNESS_FILE: roughness.dat
 ICE_AIR_CP: 1005
 ICE_BOLTZMANN: 5.67e-08
 ICE_TIME_SCHEME: 0
-ICE_BC_FAMILY: 0
+ICE_BC_FAMILY: 1 2001
 ICE_GRID_FILE_WALL_ZONES: 0
-ICE_GUI_BCLIST: 3 1000 2000 4300
-ICE_GUI_BCWALL_FLAG: 3 0 1 0
-ICE_GUI_BCWALL_HFLUX_FLAG: 3 0 0 0
-ICE_GUI_BC_COLORS_B: 3 0 128 255
-ICE_GUI_BC_COLORS_G: 3 53 0 255
-ICE_GUI_BC_COLORS_R: 3 53 128 0
-ICE_GUI_BC_HFLUX: 3 "" "" ""
-ICE_GUI_BC_NAMES: 3 "BC_1000" "BC_2000" "BC_4300"
+ICE_GUI_BCLIST: 4 1000 2000 2001 4300
+ICE_GUI_BCWALL_FLAG: 4 0 0 1 0
+ICE_GUI_BCWALL_HFLUX_FLAG: 4 0 0 0 0
+ICE_GUI_BC_COLORS_B: 4 0 0 128 255
+ICE_GUI_BC_COLORS_G: 4 0 53 0 255
+ICE_GUI_BC_COLORS_R: 4 0 53 128 0
+ICE_GUI_BC_HFLUX: 4 "" "" "" ""
+ICE_GUI_BC_NAMES: 4 "BC_1000" "BC_2000" "BC_2001" "BC_4300"
 ICE_GUI_CONDITIONS_COPIED: 1
 ICE_GUI_SEQ_TYPE: MULTI-FENSAPDROPICE
 ICE_GUI_MATLIST: 0
-ICE_GUI_WALL_OMX_DETECTED: 3 0 0 0
-ICE_GUI_WALL_OMY_DETECTED: 3 0 0 0
-ICE_GUI_WALL_OMZ_DETECTED: 3 0 0 0
-ICE_GUI_WALL_OM_MAGNITUDE: 3 1 1 1
-ICE_GUI_WALL_ROTATION_TYPE: 3 0 0 0
-ICE_ITYP: 3 1000 2000 4300
-ICE_NB_FAMILY: 0
-ICE_OM_CENT_X: 3 0.00000000e+00 0.00000000e+00 0.00000000e+00
-ICE_OM_CENT_Y: 3 0.00000000e+00 0.00000000e+00 0.00000000e+00
-ICE_OM_CENT_Z: 3 0.00000000e+00 0.00000000e+00 0.00000000e+00
-ICE_TOT_BOUNDARY_CONDITIONS: 3
-ICE_WALL_CONDUCTIVITY: 3 0 0 0
-ICE_WALL_INTERNAL_TEMPERATURE: 3 0 0 0
-ICE_WALL_OMX: 3 0.00000000e+00 0.00000000e+00 0.00000000e+00
-ICE_WALL_OMY: 3 0.00000000e+00 0.00000000e+00 0.00000000e+00
-ICE_WALL_OMZ: 3 0.00000000e+00 0.00000000e+00 0.00000000e+00
-ICE_WALL_THICKNESS: 3 0 0 0
+ICE_GUI_WALL_OMX_DETECTED: 4 0 0 0 0
+ICE_GUI_WALL_OMY_DETECTED: 4 0 0 0 0
+ICE_GUI_WALL_OMZ_DETECTED: 4 0 0 0 0
+ICE_GUI_WALL_OM_MAGNITUDE: 4 1 1 1 1
+ICE_GUI_WALL_ROTATION_TYPE: 4 0 0 0 0
+ICE_ITYP: 4 1000 2000 2001 4300
+ICE_NB_FAMILY: 1
+ICE_OM_CENT_X: 4 0 0.00000000e+00 0.00000000e+00 0.00000000e+00
+ICE_OM_CENT_Y: 4 0 0.00000000e+00 0.00000000e+00 0.00000000e+00
+ICE_OM_CENT_Z: 4 0 0.00000000e+00 0.00000000e+00 0.00000000e+00
+ICE_TOT_BOUNDARY_CONDITIONS: 4
+ICE_WALL_CONDUCTIVITY: 4 0 0 0 0
+ICE_WALL_INTERNAL_TEMPERATURE: 4 0 0 0 0
+ICE_WALL_OMX: 4 0 0.00000000e+00 0.00000000e+00 0.00000000e+00
+ICE_WALL_OMY: 4 0 0.00000000e+00 0.00000000e+00 0.00000000e+00
+ICE_WALL_OMZ: 4 0 0.00000000e+00 0.00000000e+00 0.00000000e+00
+ICE_WALL_THICKNESS: 4 0 0 0 0
 ICE_GUI_NCPU_MESHING: 10
 ICE_GUI_REMESHING_OPTION: 0
 ICE_FILE_GRID_TIMESTAMP: 677104865
