Patches and updates for multishot

--- a/glacium/config/defaults/global_default.yaml
+++ b/glacium/config/defaults/global_default.yaml
@@ -86,7 +86,7 @@ PWS_TREX_GROWTH_RATE_ATTR: 1.15
 PWS_SIZE_FIELD_DECAY: 0.95
 
 # Fluent remeshing: [CALC]
-MSH_GLOBMIN: 0.00003
+MSH_GLOBMIN: 0.0003
 MSH_PROXMIN: 0.00045
 MSH_CURVMIN: 0.0003
 MSH_CURVMAX: 0.005
@@ -141,12 +141,15 @@ ICE_H2O_CP: 4226.0
 ICE_H2O_DENSITY: 1000.0
 ICE_H2O_VISCOSITY: 0.001794
 ICE_ICE_CONDUC: 0
+ICE_IMPACT_ICE_DENSITY_LOWER_LIM: 200
+ICE_IMPACT_ICE_DENSITY_MODEL_COEFFICIENT: 5
+ICE_IMPACT_ICE_DENSITY_UPPER_LIM: 800
 ICE_ICE_CP: 2070
 ICE_ICE_DENSITY: 917
 ICE_LAT_HEAT_EVAPOR: 2500000
 ICE_LAT_HEAT_FUSION: 334000
 ICE_LAT_HEAT_SUBLIM: 2834000
-ICE_VARIABLE_DENSITY: 0
+ICE_VARIABLE_DENSITY: 5
 ICE_CRYSTAL_COEFFICIENT: 10 0 0 0.05 0 0.12 0.43 0.2 0.43 0.32 0
 ICE_CRYSTAL_CONTENT: 0.003
 ICE_DEPOSITION_VARIANT: 1
