--- a/glacium/config/defaults/global_default.yaml
+++ b/glacium/config/defaults/global_default.yaml
@@ -1,17 +1,22 @@
 # Executables
+FSP_MAX_TIME_STEPS_PER_CYCLE: 700
+FSP_GUI_FENSAP_MAX_TIME_STEPS_PER_CYCLE: 700
+
 POINTWISE_BIN: "C:/Program Files/Cadence/FidelityPointwise2022.2.2/win64/bin/tclsh.exe"
 FENSAP_BIN: "C:\\Program Files\\ANSYS Inc\\v251\\fensapice\\bin\\nti_sh.exe"
 FLUENT2FENSAP_EXE: "C:/Program Files/ANSYS Inc/v251/fensapice/bin/fluent2fensap.exe"
 
 # CPU
 N_CPU: 32
-FSP_MAX_TIME_STEPS_PER_CYCLE: 700
-FSP_GUI_FENSAP_MAX_TIME_STEPS_PER_CYCLE: 700
 FSP_GUI_CFL: 300 #300
 DRP_GUI_CFL: 20 #20
-FSP_GUI_DROP_MAX_TIME_STEPS_PER_CYCLE: 200 #120
+FSP_GUI_DROP_MAX_TIME_STEPS_PER_CYCLE: 1 #120
 SEQ_VALUE_VAR1: 10 15 15 15 15 15 30 30 30 60 60
-
+MULTISHOT_COUNT: 4
+CONVERGENCE_PDF: true
+ICE_GUI_TOTAL_TIME: 1200.0
+ICE_NUMBER_TIME_STEP: 1200000
+# XFOIL: paths
 # XFOIL: paths
 PWS_AIRFOIL_FILE: ../_data/AH63K127.dat
 PWS_PROFILE1: ../_data/AH63K127_densened.dat
@@ -80,7 +85,7 @@ PWS_TREX_GROWTH_RATE_ATTR: 1.15
 PWS_SIZE_FIELD_DECAY: 0.95
 
 # Fluent remeshing: [CALC]
-MSH_GLOBMIN: 0.00003
+MSH_GLOBMIN: 0.0003
 MSH_PROXMIN: 0.00045
 MSH_CURVMIN: 0.0003
 MSH_CURVMAX: 0.005
@@ -90,19 +95,19 @@ MSH_FIRSTCELLHEIGHT: 0.0000045
 MSH_MPX: 0.44
 MSH_MPY: 0
 MSH_MPZ: 0.0431
-MSH_PARALLEL_TET_BETA: "#t"
-MSH_ROTATIONAL_PERIODIC: "#f"
+MSH_PARALLEL_TET_BETA: '#t'
+MSH_ROTATIONAL_PERIODIC: '#f'
 MSH_PERIODIC_ANGLE: 0
 MSH_PERIODIC_AXIS_X: 0
 MSH_PERIODIC_AXIS_Y: 0
 MSH_PERIODIC_AXIS_Z: 1
-MSH_PERIODIC_ZONES: "zone5*"
-MSH_TRANSLATIONAL_PERIODIC: "#f"
+MSH_PERIODIC_ZONES: zone5*
+MSH_TRANSLATIONAL_PERIODIC: '#f'
 MSH_PERIODIC_TRANSLATION_VX: 0
 MSH_PERIODIC_TRANSLATION_VY: 0
 MSH_PERIODIC_TRANSLATION_VZ: -0.1
-MSH_PERIODIC_TRANSLATION_ZONES: "zone5*"
-MSH_REMESH_2D: "#t"
+MSH_PERIODIC_TRANSLATION_ZONES: zone5*
+MSH_REMESH_2D: '#t'
 MSH_Z_SPAN: 0.0862
 
 # FENSAP ICE
@@ -135,12 +140,15 @@ ICE_H2O_CP: 4226.0
 ICE_H2O_DENSITY: 1000.0
 ICE_H2O_VISCOSITY: 0.001794
 ICE_ICE_CONDUC: 0
+ICE_IMPACT_ICE_DENSITY_LOWER_LIM: 200
+ICE_IMPACT_ICE_DENSITY_MODEL_COEFFICIENT: 5
+ICE_IMPACT_ICE_DENSITY_UPPER_LIM: 800
 ICE_ICE_CP: 2070
 ICE_ICE_DENSITY: 917
 ICE_LAT_HEAT_EVAPOR: 2500000
 ICE_LAT_HEAT_FUSION: 334000
 ICE_LAT_HEAT_SUBLIM: 2834000
-ICE_VARIABLE_DENSITY: 0
+ICE_VARIABLE_DENSITY: 5
 ICE_CRYSTAL_COEFFICIENT: 10 0 0 0.05 0 0.12 0.43 0.2 0.43 0.32 0
 ICE_CRYSTAL_CONTENT: 0.003
 ICE_DEPOSITION_VARIANT: 1
@@ -154,11 +162,10 @@ ICE_GROWTH_DIRECTION: 1
 ICE_GUI_CONCAVITY_FIX_FLAG: 1
 ICE_GUI_GRID_OUTPUT_FLAG: 1
 ICE_GUI_INITIAL_TIME: 0
-ICE_GUI_TOTAL_TIME: 60.0
 ICE_MIN_CONCAVE_ANGLE: 70
 ICE_MODEL_BEAD: 1
 ICE_NB_SINK: 0
-ICE_NUMBER_TIME_STEP: 60000
+
 ICE_SHAPE_SMOOTHING_ITERATIONS: 0
 ICE_SURFACE_THICKNESS_METHOD: 1
 ICE_TIME_STEP: 0.001
@@ -166,18 +173,18 @@ ICE_WRITE_SURFACE_ROUGHNESS_FILE_FLAG: 5
 SMC_FILL_IN_ALLOWED_IN_PRECONDITIONING_MATRIX: 1 3
 SMC_PRECONDITIONER: 1 1
 ICE_GUI_NUMBERED_OUTPUT: 0
-ICE_GUI_TIME_BETWEEN_OUTPUT: 60
+ICE_GUI_TIME_BETWEEN_OUTPUT: 420
 ICE_IPS_LOAD: 0
 ICE_OUTPUT_FORMAT: 1
-ICE_TIME_STEP_BETWEEN_OUTPUT: 60000
+ICE_TIME_STEP_BETWEEN_OUTPUT: 420000
 ICE_AIR_FILE: ../run_FENSAP/soln
-ICE_ANTI_ICING_FILE: "NULL"
+ICE_ANTI_ICING_FILE: 'NULL'
 ICE_CHT3D_FORMAT: 1
 ICE_CONVERGENCE_FILE: iceconv.dat
 ICE_CRYSTAL_FILE: ../run_DROP3D/crystal
 ICE_DISPLACED_GRID_FILE: mesh.grid.disp
 ICE_DROPLET_FILE: ../run_DROP3D/droplet
-ICE_FORCE_FILE: "NULL"
+ICE_FORCE_FILE: 'NULL'
 ICE_GUI_USE_FORCE_FILE: 0
 ICE_GUI_USE_RESTART_FILE: 0
 ICE_INPUT_FORMAT: 1
@@ -187,53 +194,54 @@ ICE_OUTPUT_GRID: ice.grid
 ICE_OUTPUT_MAP: map.grid
 ICE_OUTPUT_STL: ice.stl
 ICE_OUTPUT_TIN: ice.tin
-ICE_RESTART_FILE: "NULL"
+ICE_RESTART_FILE: 'NULL'
 ICE_SOLUTION_FILE: swimsol
 ICE_SURFACE_ROUGHNESS_FILE: roughness.dat
 ICE_AIR_CP: 1005
 ICE_BOLTZMANN: 5.67e-08
 ICE_TIME_SCHEME: 0
-ICE_BC_FAMILY: 0
+ICE_BC_FAMILY: 1 2001
 ICE_GRID_FILE_WALL_ZONES: 0
-ICE_GUI_BCLIST: 3 1000 2000 4300
-ICE_GUI_BCWALL_FLAG: 3 0 1 0
-ICE_GUI_BCWALL_HFLUX_FLAG: 3 0 0 0
-ICE_GUI_BC_COLORS_B: 3 0 128 255
-ICE_GUI_BC_COLORS_G: 3 53 0 255
-ICE_GUI_BC_COLORS_R: 3 53 128 0
-ICE_GUI_BC_HFLUX: 3 "" "" ""
-ICE_GUI_BC_NAMES: 3 "BC_1000" "BC_2000" "BC_4300"
+ICE_GUI_BCLIST: 4 1000 2000 2001 4300
+ICE_GUI_BCWALL_FLAG: 4 0 0 1 0
+ICE_GUI_BCWALL_HFLUX_FLAG: 4 0 0 0 0
+ICE_GUI_BC_COLORS_B: 4 0 0 128 255
+ICE_GUI_BC_COLORS_G: 4 0 53 0 255
+ICE_GUI_BC_COLORS_R: 4 0 53 128 0
+ICE_GUI_BC_HFLUX: 4 "" "" "" ""
+ICE_GUI_BC_NAMES: 4 "BC_1000" "BC_2000" "BC_2001" "BC_4300"
 ICE_GUI_CONDITIONS_COPIED: 1
+ICE_GUI_SEQ_TYPE: MULTI-FENSAPDROPICE
 ICE_GUI_MATLIST: 0
-ICE_GUI_WALL_OMX_DETECTED: 3 0 0 0
-ICE_GUI_WALL_OMY_DETECTED: 3 0 0 0
-ICE_GUI_WALL_OMZ_DETECTED: 3 0 0 0
-ICE_GUI_WALL_OM_MAGNITUDE: 3 1 1 1
-ICE_GUI_WALL_ROTATION_TYPE: 3 0 0 0
-ICE_ITYP: 3 1000 2000 4300
-ICE_NB_FAMILY: 0
-ICE_OM_CENT_X: 3 0.00000000e+00 0.00000000e+00 0.00000000e+00
-ICE_OM_CENT_Y: 3 0.00000000e+00 0.00000000e+00 0.00000000e+00
-ICE_OM_CENT_Z: 3 0.00000000e+00 0.00000000e+00 0.00000000e+00
-ICE_TOT_BOUNDARY_CONDITIONS: 3
-ICE_WALL_CONDUCTIVITY: 3 0 0 0
-ICE_WALL_INTERNAL_TEMPERATURE: 3 0 0 0
-ICE_WALL_OMX: 3 0.00000000e+00 0.00000000e+00 0.00000000e+00
-ICE_WALL_OMY: 3 0.00000000e+00 0.00000000e+00 0.00000000e+00
-ICE_WALL_OMZ: 3 0.00000000e+00 0.00000000e+00 0.00000000e+00
-ICE_WALL_THICKNESS: 3 0 0 0
+ICE_GUI_WALL_OMX_DETECTED: 4 0 0 0 0
+ICE_GUI_WALL_OMY_DETECTED: 4 0 0 0 0
+ICE_GUI_WALL_OMZ_DETECTED: 4 0 0 0 0
+ICE_GUI_WALL_OM_MAGNITUDE: 4 1 1 1 1
+ICE_GUI_WALL_ROTATION_TYPE: 4 0 0 0 0
+ICE_ITYP: 4 1000 2000 2001 4300
+ICE_NB_FAMILY: 1
+ICE_OM_CENT_X: 4 0 0.00000000e+00 0.00000000e+00 0.00000000e+00
+ICE_OM_CENT_Y: 4 0 0.00000000e+00 0.00000000e+00 0.00000000e+00
+ICE_OM_CENT_Z: 4 0 0.00000000e+00 0.00000000e+00 0.00000000e+00
+ICE_TOT_BOUNDARY_CONDITIONS: 4
+ICE_WALL_CONDUCTIVITY: 4 0 0 0 0
+ICE_WALL_INTERNAL_TEMPERATURE: 4 0 0 0 0
+ICE_WALL_OMX: 4 0 0.00000000e+00 0.00000000e+00 0.00000000e+00
+ICE_WALL_OMY: 4 0 0.00000000e+00 0.00000000e+00 0.00000000e+00
+ICE_WALL_OMZ: 4 0 0.00000000e+00 0.00000000e+00 0.00000000e+00
+ICE_WALL_THICKNESS: 4 0 0 0 0
 ICE_GUI_NCPU_MESHING: 10
 ICE_GUI_REMESHING_OPTION: 0
 ICE_FILE_GRID_TIMESTAMP: 677104865
 ICE_INPUT_FILE_VERSION: 202
 
-FSP_BC_SUBTYPE: 3 2 0 0
-FSP_GUI_BC_SCREEN_MODE: 3 0 1 0
-FSP_GUI_BC_SURFACE_TYPE_FLAG: 3 0 0 0
-FSP_QD: 3 0 0 0
-FSP_QSWIT: 3 0 1 0
-FSP_TS: 3 288 0 0
-FSP_WIRE_SPACING: 3 0 0 0
+FSP_BC_SUBTYPE: 4 2 0 0 0
+FSP_GUI_BC_SCREEN_MODE: 4 0 1 1 0
+FSP_GUI_BC_SURFACE_TYPE_FLAG: 4 0 0 0 0
+FSP_QD: 4 0 0 0 0
+FSP_QSWIT: 4 0 0 0 0
+FSP_TS: 4 263.15 274.394123859 274.394123859 0
+FSP_WIRE_SPACING: 4 0 0 0 0
 FSP_CHARAC_LENGTH: 0.431
 FSP_DIMENSIONAL_TIME_STEP: 0
 FSP_GUI_VARIABLE_RELAXATION: 1
@@ -252,12 +260,12 @@ FSP_ENERGY_EQUATION: 1
 FSP_GOVERNING_EQUATIONS: 8
 FSP_GUI_SOLVER_MODE: 0
 FSP_GUI_SOLVER_MODE_PROXY: 0
-FSP_FREESTREAM_PRESSURE: 101325
-FSP_FREESTREAM_TEMPERATURE: 288
+FSP_FREESTREAM_PRESSURE: 1.00141560e+05
+FSP_FREESTREAM_TEMPERATURE: 263.15
 FSP_FREESTREAM_VELOCITY: 50
 FSP_GUI_USE_INITIAL_TEMPERATURE: 0
-FSP_MACH_NUMBER: 0.14697
-FSP_REYNOLDS_NUMBER: 1475600.0
+FSP_MACH_NUMBER: 1.5375e-01
+FSP_REYNOLDS_NUMBER: 1.7133e+06
 FSP_FREESTREAM_DIAMETER: 20
 FSP_FREESTREAM_LWC: 0.001
 FSP_WATER_DENSITY: 1000
@@ -275,81 +283,81 @@ FSP_GUI_DROPLET_INITIAL_VEL_COMP_Y: 0
 FSP_GUI_DROPLET_INITIAL_VEL_COMP_Z: 0
 FSP_GRAVITY: 3 0 0 0
 FSP_GUI_BODY_FORCES: 0
-FSP_GUI_ITYP_BC_NAMES: 3 "farf" "wall" "symm"
-FSP_ITYP: 3 1000 2000 4300
-FSP_TOT_BOUNDARY_CONDITIONS: 3
-FSP_CONTOUR_PRESS: 3 0 0 0
-FSP_GUI_BC_INLET_SUPERSONIC_FLAG: 3 1 0 0
-FSP_GUI_BC_OUTLET_SUPERSONIC_FLAG: 3 0 0 0
-FSP_GUI_ICE_WALL_CONDUCTIVITY: 3 0 0.00000000e+00 0
-FSP_GUI_ICE_WALL_INTERNAL_TEMPERATURE: 3 0 0.00000000e+00 0
-FSP_GUI_ICE_WALL_THICKNESS: 3 0 0.00000000e+00 0
-FSP_GUI_INLET_ROTATION_TYPE: 3 0 0 0
-FSP_GUI_IRS_NITER_PRE: 3 0 0 0
-FSP_GUI_IRS_NULL_PRE: 3 0 0 0
-FSP_GUI_IRS_PRES_END: 3 101325 101325 101325
-FSP_GUI_IRS_PRES_START: 3 101325 101325 101325
-FSP_GUI_IWT: 3 0 0 0
-FSP_GUI_PRESSURE_CONTOUR_INTEGRALS_INDEX: 3 0 0 0
-FSP_GUI_RADIAL_EQUILIBRIUM_FLAG: 3 0 0 0
-FSP_GUI_TURB1: 3 "" "" ""
-FSP_GUI_TURB2: 3 "" "" ""
-FSP_GUI_WALL_OMX_DETECTED: 3 0 0 0
-FSP_GUI_WALL_OMY_DETECTED: 3 0 0 0
-FSP_GUI_WALL_OMZ_DETECTED: 3 0 0 0
-FSP_GUI_WALL_OM_MAGNITUDE: 3 1 1 1
-FSP_GUI_WALL_ROTATION_TYPE: 3 0 0 0
-FSP_IOPT: 3 0 0 0
+FSP_GUI_ITYP_BC_NAMES: 4 "BC_1000" "BC_2000" "BC_2001" "BC_4300"
+FSP_ITYP: 4 1000 2000 2001 4300
+FSP_TOT_BOUNDARY_CONDITIONS: 4
+FSP_CONTOUR_PRESS: 4 0 0 0 0
+FSP_GUI_BC_INLET_SUPERSONIC_FLAG: 4 1 0 0 0
+FSP_GUI_BC_OUTLET_SUPERSONIC_FLAG: 4 0 0 0 0
+FSP_GUI_ICE_WALL_CONDUCTIVITY: 4 0 0.00000000e+00 0.00000000e+00 0
+FSP_GUI_ICE_WALL_INTERNAL_TEMPERATURE: 4 0 0.00000000e+00 0.00000000e+00 0
+FSP_GUI_ICE_WALL_THICKNESS: 4 0 0.00000000e+00 0.00000000e+00 0
+FSP_GUI_INLET_ROTATION_TYPE: 4 0 0 0 0
+FSP_GUI_IRS_NITER_PRE: 4 0 0 0 0
+FSP_GUI_IRS_NULL_PRE: 4 0 0 0 0
+FSP_GUI_IRS_PRES_END: 4 101325 101325 101325 101325
+FSP_GUI_IRS_PRES_START: 4 101325 101325 101325 101325
+FSP_GUI_IWT: 4 0 0 0 0
+FSP_GUI_PRESSURE_CONTOUR_INTEGRALS_INDEX: 4 0 0 0 0
+FSP_GUI_RADIAL_EQUILIBRIUM_FLAG: 4 0 0 0 0
+FSP_GUI_TURB1: 4 "" "" "" ""
+FSP_GUI_TURB2: 4 "" "" "" ""
+FSP_GUI_WALL_OMX_DETECTED: 4 0 0 0 0
+FSP_GUI_WALL_OMY_DETECTED: 4 0 0 0 0
+FSP_GUI_WALL_OMZ_DETECTED: 4 0 0 0 0
+FSP_GUI_WALL_OM_MAGNITUDE: 4 1 1 1 1
+FSP_GUI_WALL_ROTATION_TYPE: 4 0 0 0 0
+FSP_IOPT: 4 0 0 0 0
 FSP_IWHERE: 0
-FSP_OM_CENT_X: 3 0 0 0
-FSP_OM_CENT_Y: 3 0 0 0
-FSP_OM_CENT_Z: 3 0 0 0
+FSP_OM_CENT_X: 4 0 0 0 0
+FSP_OM_CENT_Y: 4 0 0 0 0
+FSP_OM_CENT_Z: 4 0 0 0 0
 FSP_PRESFIX: 0
-FSP_PS: 3 101325 0 0
-FSP_PS_EQUATION: 3 "101325" "0" "0"
-FSP_RADIAL_EQUILIBRIUM_BOUNDARIES: 3 0 0 0
-FSP_RAD_EQ_NUMBER_OF_BANDS: 3 1 1 1
-FSP_RAD_EQ_REFPRESS_R_LOCATION: 3 1 1 1
-FSP_TS_EQUATION: 3 "288" "0" "0"
-FSP_VX: 3 50 0 0
-FSP_VX_EQUATION: 3 "50" "0" "0"
-FSP_VY: 3 0 0 0
-FSP_VY_EQUATION: 3 "0" "0" "0"
-FSP_VZ: 3 0 0 0
-FSP_VZ_EQUATION: 3 "0" "0" "0"
-FSP_WALL_OMX: 3 0 0 0
-FSP_WALL_OMY: 3 0 0 0
-FSP_WALL_OMZ: 3 0 0 0
-DRP_GUI_BC_DIAM: 3 "20" "" ""
-DRP_GUI_BC_DIAM_CRYSTALS: 3 "100" "" ""
-DRP_GUI_BC_DIAM_CRYSTALS_FLAG: 3 1 1 1
-DRP_GUI_BC_DIAM_FLAG: 3 1 1 1
-DRP_GUI_BC_LWC: 3 "0.001" "" ""
-DRP_GUI_BC_LWC_CRYSTALS_FLAG: 3 1 1 1
-DRP_GUI_BC_LWC_FLAG: 3 1 1 1
-DRP_GUI_BC_MELTF_CRYSTALS_FLAG: 3 0 1 1
-DRP_GUI_BC_TEMP: 3 "288" "" ""
-DRP_GUI_BC_TEMP_CRYSTALS_FLAG: 3 1 1 1
-DRP_GUI_BC_TEMP_FLAG: 3 1 1 1
-DRP_GUI_BC_VAPOR_INIT_TYPE: 3 2 2 2
-DRP_GUI_BC_VAP_CONC: 3 "0.001" "" ""
-DRP_GUI_BC_VAP_CONC_FLAG: 3 1 1 1
-DRP_GUI_BC_VAP_RH: 3 "100" "" ""
-DRP_GUI_BC_VAP_RH_FLAG: 3 1 1 1
-DRP_GUI_BC_VAP_WETBULB: 3 "265" "" ""
-DRP_GUI_BC_VAP_WETBULB_FLAG: 3 1 1 1
-DRP_GUI_BC_VX: 3 "0" "" ""
-DRP_GUI_BC_VX_CRYSTALS_FLAG: 3 1 1 1
-DRP_GUI_BC_VX_FLAG: 3 1 1 1
-DRP_GUI_BC_VY: 3 "0" "" ""
-DRP_GUI_BC_VY_CRYSTALS_FLAG: 3 1 1 1
-DRP_GUI_BC_VY_FLAG: 3 1 1 1
-DRP_GUI_BC_VZ: 3 "0" "" ""
-DRP_GUI_BC_VZ_CRYSTALS_FLAG: 3 1 1 1
-DRP_GUI_BC_VZ_FLAG: 3 1 1 1
+FSP_PS: 4 100141.56 0 0 0
+FSP_PS_EQUATION: 4 "100141.56" "0" "0" "0"
+FSP_RADIAL_EQUILIBRIUM_BOUNDARIES: 4 0 0 0 0
+FSP_RAD_EQ_NUMBER_OF_BANDS: 4 1 1 1 1
+FSP_RAD_EQ_REFPRESS_R_LOCATION: 4 1 1 1 1
+FSP_TS_EQUATION: 4 "263.15" "274.394123859" "274.394123859" "0"
+FSP_VX: 4 50 0 0 0
+FSP_VX_EQUATION: 4 "50" "0" "0" "0"
+FSP_VY: 4 0 0 0 0
+FSP_VY_EQUATION: 4 "0" "0" "0" "0"
+FSP_VZ: 4 0 0 0 0
+FSP_VZ_EQUATION: 4 "0" "0" "0" "0"
+FSP_WALL_OMX: 4 0 0 0 0
+FSP_WALL_OMY: 4 0 0 0 0
+FSP_WALL_OMZ: 4 0 0 0 0
+DRP_GUI_BC_DIAM: 4 "20" "" "" ""
+DRP_GUI_BC_DIAM_CRYSTALS: 4 "100" "" "" ""
+DRP_GUI_BC_DIAM_CRYSTALS_FLAG: 4 1 1 1 1
+DRP_GUI_BC_DIAM_FLAG: 4 1 1 1 1
+DRP_GUI_BC_LWC: 4 "0.001" "" "" ""
+DRP_GUI_BC_LWC_CRYSTALS_FLAG: 4 1 1 1 1
+DRP_GUI_BC_LWC_FLAG: 4 1 1 1 1
+DRP_GUI_BC_MELTF_CRYSTALS_FLAG: 4 0 1 1 1
+DRP_GUI_BC_TEMP: 4 "263.15" "" "" ""
+DRP_GUI_BC_TEMP_CRYSTALS_FLAG: 4 1 1 1 1
+DRP_GUI_BC_TEMP_FLAG: 4 1 1 1 1
+DRP_GUI_BC_VAPOR_INIT_TYPE: 4 2 2 2 2
+DRP_GUI_BC_VAP_CONC: 4 "0.001" "" "" ""
+DRP_GUI_BC_VAP_CONC_FLAG: 4 1 1 1 1
+DRP_GUI_BC_VAP_RH: 4 "100" "" "" ""
+DRP_GUI_BC_VAP_RH_FLAG: 4 1 1 1 1
+DRP_GUI_BC_VAP_WETBULB: 4 "265" "" "" ""
+DRP_GUI_BC_VAP_WETBULB_FLAG: 4 1 1 1 1
+DRP_GUI_BC_VX: 4 "0" "" "" ""
+DRP_GUI_BC_VX_CRYSTALS_FLAG: 4 1 1 1 1
+DRP_GUI_BC_VX_FLAG: 4 1 1 1 1
+DRP_GUI_BC_VY: 4 "0" "" "" ""
+DRP_GUI_BC_VY_CRYSTALS_FLAG: 4 1 1 1 1
+DRP_GUI_BC_VY_FLAG: 4 1 1 1 1
+DRP_GUI_BC_VZ: 4 "0" "" "" ""
+DRP_GUI_BC_VZ_CRYSTALS_FLAG: 4 1 1 1 1
+DRP_GUI_BC_VZ_FLAG: 4 1 1 1 1
 FSP_REINJECTION_SURFACE: 3 0 1 0
-FSP_VAPOR_WET_WALL: 3 0 0 0
-FSP_WIRE_DIAMETER: 3 0 0 0
+FSP_VAPOR_WET_WALL: 4 0 0 0 0
+FSP_WIRE_DIAMETER: 4 0 0 0 0
 FSP_GUI_ID_MAT_COLORS_B: 0
 FSP_GUI_ID_MAT_COLORS_G: 0
 FSP_GUI_ID_MAT_COLORS_R: 0
@@ -373,6 +381,7 @@ FSP_SUPG_COEF_1: 1
 FSP_SUPG_COEF_2: 1
 FSP_SUPG_TYPE: 3
 FSP_GUI_TURBULENCE_SWITCH_PREVIOUS: 1
+FSP_MAX_LAPLACE_ITERATIONS: 3
 FSP_RELAXATION_FACTOR_FOR_TURBULENCE: 1 1
 FSP_TURBULENCE_SWITCH: 1
 FSP_RIGID_MOTION_COEFFS: 17 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0
@@ -398,18 +407,19 @@ FSP_NPROBES: 0
 FSP_MAX_ENERGY_ITERATIONS_PER_CYCLE: 1
 FSP_MFLOW_RLX: 0.1
 FSP_GUI_REINJECTION_FLAG: 0
-FSP_RADIAL_EQUILIBRIUM_ITER_NUM: 3 0 0 0
-FSP_RADIAL_EQUILIBRIUM_ITER_START: 3 0 0 0
-FSP_RAD_EQ_PRESS_END: 3 101325 101325 101325
-FSP_RAD_EQ_PRESS_START: 3 101325 101325 101325
-FSP_FILE_GRID_TIMESTAMP: 676506483
-FSP_REF_AREA: None
+FSP_GUI_NO_TIMEBC: 1
+FSP_RADIAL_EQUILIBRIUM_ITER_NUM: 4 0 0 0 0
+FSP_RADIAL_EQUILIBRIUM_ITER_START: 4 0 0 0 0
+FSP_RAD_EQ_PRESS_END: 4 101325 101325 101325 101325
+FSP_RAD_EQ_PRESS_START: 4 101325 101325 101325 101325
+FSP_FILE_GRID_TIMESTAMP: 679085009
+FSP_REF_AREA: 0.0185761
 FSP_GUI_CFLADAPT: 0
 FSP_GUI_TIME_ACCURATE_SCHEME_ORDER: -1
 FSP_RLXITER: 300
 FSP_RLXVAR: 1.0
 FSP_ARTIFICIAL_VISCOSITY_TYPE: 1 -4
-FSP_GUI_CYCLE1_AV_COEF: 1.0e-07
+FSP_GUI_CYCLE1_AV_COEF: 1.0000e-07
 FSP_GUI_CYCLE1_AV_SU_ORDER: 100
 FSP_GUI_CYCLE1_AV_TYPE: -4
 FSP_RATIO_AV_MATRIX_TO_AV_RESIDUAL: 1 1
@@ -454,12 +464,27 @@ FSP_SOLUTION_PRINTOUT_FOR_INITIAL_GUESS: 1
 FSP_SOLUTION_PRINTOUT_FOR_NEWTON_ITERATIONS: 1
 FSP_SOLUTION_PRINTOUT_FOR_PARAMETER_CYCLES: 1
 FSP_SOLUTION_PRINTOUT_FOR_TIME_STEPS: 1
-FSP_DRAG_VECTOR_COMPONENT_X: 0.99756405026
-FSP_DRAG_VECTOR_COMPONENT_Y: 0.0697564737441
+FSP_DRAG_VECTOR_COMPONENT_X: 1
+FSP_DRAG_VECTOR_COMPONENT_Y: 0
 FSP_DRAG_VECTOR_COMPONENT_Z: 0
 FSP_GUI_DRAG_BC: 1000
 FSP_GUI_DRAG_DIRECTION: 2
 FSP_LIFT_AXIS: 2
-FSP_MOMENTS_REFERENCE_POINT_COMPONENT_X: 0
+FSP_MOMENTS_REFERENCE_POINT_COMPONENT_X: 0.10775
 FSP_MOMENTS_REFERENCE_POINT_COMPONENT_Y: 0
-FSP_MOMENTS_REFERENCE_POINT_COMPONENT_Z: 0
+FSP_MOMENTS_REFERENCE_POINT_COMPONENT_Z: 0.02155
+FSP_INPUT_FILE_VERSION: 242
+FSP_FILE_CONVERGENCE: converg
+FSP_FILE_CRYSTAL_SOLUTION_MULTI: Distribution.*/crystal
+FSP_FILE_DISPLACEMENT: timebc.dat
+FSP_FILE_GMRES_DATA: gmres.out
+FSP_FILE_OUTPUT_LOG: out
+FSP_GUI_VAPOR_RESTART_FLAG: 0
+FSP_INPUT_FILE_FORMAT: 1
+FSP_OUTPUT_FILE_FORMAT: 1
+FSP_UNIT_ACTUATOR_DISK: disk_data.dat
+GLB_FILE_FLOW_SOLUTION: soln
+GLB_FILE_SURFACE_FORCES: surface.dat
+FSP_GUI_ITYP_BC_COLORS_B: 4 53 128 128 255
+FSP_GUI_ITYP_BC_COLORS_G: 4 53 128 128 0
+FSP_GUI_ITYP_BC_COLORS_R: 4 255 128 128 0
