--- a/glacium/config/defaults/global_default.yaml
+++ b/glacium/config/defaults/global_default.yaml
@@ -1,6 +1,6 @@
 # Executables
-FSP_MAX_TIME_STEPS_PER_CYCLE: 1
-FSP_GUI_FENSAP_MAX_TIME_STEPS_PER_CYCLE: 1
+FSP_MAX_TIME_STEPS_PER_CYCLE: 700
+FSP_GUI_FENSAP_MAX_TIME_STEPS_PER_CYCLE: 2
 
 POINTWISE_BIN: "C:/Program Files/Cadence/FidelityPointwise2023.2.3/win64/bin/tclsh.exe"
 FENSAP_BIN: "C:\\Program Files\\ANSYS Inc\\v251\\fensapice\\bin\\nti_sh.exe"
@@ -8,9 +8,9 @@ FLUENT2FENSAP_EXE: "C:/Program Files/ANSYS Inc/v251/fensapice/bin/fluent2fensap.
 
 # CPU
 N_CPU: 12
-FSP_GUI_CFL: 300 #300
-DRP_GUI_CFL: 20 #20
-FSP_GUI_DROP_MAX_TIME_STEPS_PER_CYCLE: 1 #120
+FSP_GUI_CFL: 300
+DRP_GUI_CFL: 20
+FSP_GUI_DROP_MAX_TIME_STEPS_PER_CYCLE: 3
 SEQ_VALUE_VAR1: 10 15 15 15 15 15 30 30 30 60 60
 MULTISHOT_COUNT: 4
 CONVERGENCE_PDF: true
@@ -22,12 +22,12 @@ ICE_NUMBER_TIME_STEP: 1200000
 DROP3D_DRP_GUI_CFL: 20
 DROP3D_FSP_DIMENSIONAL_TIME_STEP: 1000000
 DROP3D_FSP_GUI_CFL: 300
-DROP3D_FSP_GUI_DROP_MAX_TIME_STEPS_PER_CYCLE: 1
-DROP3D_FSP_GUI_FENSAP_MAX_TIME_STEPS_PER_CYCLE: 1
+DROP3D_FSP_GUI_DROP_MAX_TIME_STEPS_PER_CYCLE: 5
+DROP3D_FSP_GUI_FENSAP_MAX_TIME_STEPS_PER_CYCLE: 6
 DROP3D_FSP_GUI_VARIABLE_RELAXATION: 0
 DROP3D_FSP_INVERSE_CFL: 0.05
 DROP3D_FSP_MAX_NEWTON_ITERATIONS_PER_CYCLE: 1
-DROP3D_FSP_MAX_TIME_STEPS_PER_CYCLE: 1 #120
+DROP3D_FSP_MAX_TIME_STEPS_PER_CYCLE: 120 #120
 DROP3D_FSP_TIME_ACCURATE_SCHEME_ORDER: -1
 DROP3D_FSP_TOTAL_SIMULATION_TIME: 500
 # XFOIL: paths
@@ -253,7 +253,7 @@ FSP_BC_SUBTYPE: 4 2 0 0 0
 FSP_GUI_BC_SCREEN_MODE: 4 0 1 1 0
 FSP_GUI_BC_SURFACE_TYPE_FLAG: 4 0 0 0 0
 FSP_QD: 4 0 0 0 0
-FSP_QSWIT: 4 0 1 1 0
+FSP_QSWIT: 4 0 0 0 0
 FSP_TS: 4 263.15 274.394123859 274.394123859 0
 FSP_WIRE_SPACING: 4 0 0 0 0
 FSP_CHARAC_LENGTH: 0.431
@@ -369,7 +369,7 @@ DRP_GUI_BC_VY_FLAG: 4 1 1 1 1
 DRP_GUI_BC_VZ: 4 "0" "" "" ""
 DRP_GUI_BC_VZ_CRYSTALS_FLAG: 4 1 1 1 1
 DRP_GUI_BC_VZ_FLAG: 4 1 1 1 1
-FSP_REINJECTION_SURFACE: 3 0 1 0
+FSP_REINJECTION_SURFACE: 4 0 1 1 0
 FSP_VAPOR_WET_WALL: 4 0 0 0 0
 FSP_WIRE_DIAMETER: 4 0 0 0 0
 FSP_GUI_ID_MAT_COLORS_B: 0
