--- a/glacium/config/defaults/global_default.yaml
+++ b/glacium/config/defaults/global_default.yaml
@@ -1,5 +1,5 @@
 # Executables
-FSP_MAX_TIME_STEPS_PER_CYCLE: 1
+FSP_MAX_TIME_STEPS_PER_CYCLE: 1 # The important one
 FSP_GUI_FENSAP_MAX_TIME_STEPS_PER_CYCLE: 2
 
 POINTWISE_BIN: "C:/Program Files/Cadence/FidelityPointwise2023.2.3/win64/bin/tclsh.exe"
