--- a/glacium/config/custom/multishot.yaml
+++ b/glacium/config/custom/multishot.yaml
@@ -14,6 +14,8 @@ DRP_GUI_CFL: 20 #20
 FSP_GUI_DROP_MAX_TIME_STEPS_PER_CYCLE: 1 #120
 SEQ_VALUE_VAR1: 10 15 15 15 15 15 30 30 30 60 60
 CONVERGENCE_PDF: true
+# Example icing time for each shot (seconds); number of shots equals list length.
+# CASE_MULTISHOT: [10, 20, 30]
 # XFOIL: paths
 # XFOIL: paths
 PWS_AIRFOIL_FILE: ../_data/AH63K127.dat
