--- a/glacium/config/defaults/global_default.yaml
+++ b/glacium/config/defaults/global_default.yaml
@@ -1,16 +1,16 @@
 # Executables
-FSP_MAX_TIME_STEPS_PER_CYCLE: 500 # The important one
-FSP_GUI_FENSAP_MAX_TIME_STEPS_PER_CYCLE: 500
-FSP_GUI_DROP_MAX_TIME_STEPS_PER_CYCLE: 120
-DROP3D_FSP_GUI_FENSAP_MAX_TIME_STEPS_PER_CYCLE: 500
-DROP3D_FSP_GUI_DROP_MAX_TIME_STEPS_PER_CYCLE: 120
+FSP_MAX_TIME_STEPS_PER_CYCLE: 20 # The important one 500
+FSP_GUI_FENSAP_MAX_TIME_STEPS_PER_CYCLE: 20 # 500
+FSP_GUI_DROP_MAX_TIME_STEPS_PER_CYCLE: 20 # 120
+DROP3D_FSP_GUI_FENSAP_MAX_TIME_STEPS_PER_CYCLE: 20 #500
+DROP3D_FSP_GUI_DROP_MAX_TIME_STEPS_PER_CYCLE: 20 #120
 
-POINTWISE_BIN: "C:/Program Files/Cadence/FidelityPointwise2023.2.3/win64/bin/tclsh.exe"
+POINTWISE_BIN: "C:/Program Files/Cadence/FidelityPointwise2022.2.2/win64/bin/tclsh.exe"
 FENSAP_BIN: "C:\\Program Files\\ANSYS Inc\\v251\\fensapice\\bin\\nti_sh.exe"
 FLUENT2FENSAP_EXE: "C:/Program Files/ANSYS Inc/v251/fensapice/bin/fluent2fensap.exe"
 
 # CPU
-N_CPU: 12
+N_CPU: 36
 FSP_GUI_CFL: 300
 DRP_GUI_CFL: 20
 SEQ_VALUE_VAR1: 10 15 15 15 15 15 30 30 30 60 60
@@ -243,7 +243,7 @@ ICE_WALL_OMX: 4 0 0.00000000e+00 0.00000000e+00 0.00000000e+00
 ICE_WALL_OMY: 4 0 0.00000000e+00 0.00000000e+00 0.00000000e+00
 ICE_WALL_OMZ: 4 0 0.00000000e+00 0.00000000e+00 0.00000000e+00
 ICE_WALL_THICKNESS: 4 0 0 0 0
-ICE_GUI_NCPU_MESHING: 12
+ICE_GUI_NCPU_MESHING: 36
 ICE_GUI_REMESHING_OPTION: 0
 ICE_FILE_GRID_TIMESTAMP: 677104865
 ICE_INPUT_FILE_VERSION: 202
