Place iced sweep roughness files under run directory

--- a/glacium/config/defaults/global_default.yaml
+++ b/glacium/config/defaults/global_default.yaml
@@ -5,7 +5,7 @@ FSP_GUI_DROP_MAX_TIME_STEPS_PER_CYCLE: 120 # 120
 DROP3D_FSP_GUI_FENSAP_MAX_TIME_STEPS_PER_CYCLE: 700 #500
 DROP3D_FSP_GUI_DROP_MAX_TIME_STEPS_PER_CYCLE: 120 #120
 
-FSP_FILE_VARIABLE_ROUGHNESS: "roughness.dat.ice.XXXXXX"
+FSP_FILE_VARIABLE_ROUGHNESS: "NULL"
 
 POINTWISE_BIN: "C:/Program Files/Cadence/FidelityPointwise2022.2.2/win64/bin/tclsh.exe"
 FENSAP_BIN: "C:\\Program Files\\ANSYS Inc\\v251\\fensapice\\bin\\nti_sh.exe"
