--- a/glacium/config/defaults/global_default.yaml
+++ b/glacium/config/defaults/global_default.yaml
@@ -13,7 +13,7 @@ FLUENT2FENSAP_EXE: "C:/Program Files/ANSYS Inc/v251/fensapice/bin/fluent2fensap.
 
 # CPU
 N_CPU: 36
-FSP_GUI_CFL: 300
+FSP_GUI_CFL: 200 #300
 DRP_GUI_CFL: 20
 SEQ_VALUE_VAR1: 10 15 15 15 15 15 30 30 30 60 60
 CONVERGENCE_PDF: true
@@ -24,7 +24,7 @@ ICE_NUMBER_TIME_STEP: 1200000
 
 DROP3D_DRP_GUI_CFL: 20
 DROP3D_FSP_DIMENSIONAL_TIME_STEP: 1000000
-DROP3D_FSP_GUI_CFL: 300
+DROP3D_FSP_GUI_CFL: 200 # 300
 DROP3D_FSP_GUI_VARIABLE_RELAXATION: 0
 DROP3D_FSP_INVERSE_CFL: 0.05
 DROP3D_FSP_MAX_NEWTON_ITERATIONS_PER_CYCLE: 1
@@ -260,7 +260,7 @@ FSP_WIRE_SPACING: 4 0 0 0 0
 FSP_CHARAC_LENGTH: 0.431
 FSP_DIMENSIONAL_TIME_STEP: 0
 FSP_GUI_VARIABLE_RELAXATION: 1
-FSP_INVERSE_CFL: 0.00333333333333
+FSP_INVERSE_CFL: 0.005 #0.00333333333333
 FSP_MAX_NEWTON_ITERATIONS_PER_CYCLE: 1
 
 FSP_TIME_ACCURATE_SCHEME_ORDER: -1
